--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootswatch/dist/materia/bootstrap.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
@@ -119,6 +124,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "requisicoes-app"
+    }
+  },
+  "defaultProject": "requisicoes-app",
+  "cli": {
+    "analytics": "a530c7e2-4c57-4b42-bb63-454159a8b8cf"
+  }
 }
