--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.5",
+    "@angular/animations": "^10.2.5",
+    "@angular/cdk": "^11.1.2",
     "@angular/common": "~10.2.5",
     "@angular/compiler": "~10.2.5",
     "@angular/core": "~10.2.5",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.2.5",
     "@angular/platform-browser": "~10.2.5",
     "@angular/platform-browser-dynamic": "~10.2.5",
     "@angular/router": "~10.2.5",
+    "bootstrap": "^5.3.0",
+    "bootswatch": "^5.3.0",
+    "class-transformer": "^0.3.1",
+    "firebase": "^8.2.6",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
