--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "primeicons": "^4.1.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.7.12",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
